--- a/NetCoreVideoUpload/Views/Home/Index.cshtml
+++ b/NetCoreVideoUpload/Views/Home/Index.cshtml
@@ -1,27 +1,31 @@
-﻿@model IEnumerable<NetCoreVideoUpload.Models.Videos> 
+﻿@model IEnumerable<NetCoreVideoUpload.Models.Videos>
 
 @{
     ViewData["Title"] = "Home Page";
 }
 
+<div class="col-md-12">
+    @foreach (var item in Model)
+    {
+        if (item.Extension == ".mp4")
+        {
 
-@foreach (var item in Model)
-{
-<div class="col-md-4">
-    <div class="row">
-        <div class="card">
-            <div class="card-body">
-                <a class="card-title btn btn-block btn-outline-info">@item.VideoTitle</a>
-                <a class="card-text">@item.Description</a>
-                <br />
-                <a>@item.VideoLength</a>
-                <br />
-                <video class="card-img" width="200" height="200" controls>
-                    <source src="~/UploadedVideos/@item.FileName" type="video/mp4" />
-                </video>
-                <a class="card-footer form-inline">Video Type is: @item.Extension</a>
+            <div class="form-check-inline">
+                <div class="card">
+                    <div class="card-body justify-content-center" style="height:auto;">
+                        <a class="card-title btn btn-block btn-outline-info">@item.VideoTitle</a>
+                        <a class="card-text">@item.Description</a>
+                        <br />
+                        <a>@item.VideoLength</a>
+                        <br />
+                        <video class="card-img" style="height:auto; width:600px;" controls>
+                            <source src="~/UploadedVideos/@item.FileName" type="video/mp4" />
+                        </video>
+                        <a class="card-footer form-inline">Video Type is: @item.Extension</a>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
+
+        }
+    }
 </div>
-}
