--- a/NetCoreVideoUpload/Views/Home/Upload.cshtml
+++ b/NetCoreVideoUpload/Views/Home/Upload.cshtml
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="UploadedFile" class="control-label">Video File</label>
-                <input asp-for="UploadedFile" type="file" class="form-control-file" />
+                <input asp-for="UploadedFile" type="file" class="form-control-file" accept=".mp4,.mpeg" />
                 <span asp-validation-for="UploadedFile" class="text-danger"></span>
             </div>
             <div class="form-group">
