--- a/NetCoreVideoUpload/wwwroot/css/site.css
+++ b/NetCoreVideoUpload/wwwroot/css/site.css
@@ -9,7 +9,7 @@ a.navbar-brand {
 
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+  color: white;
 }
 
 .btn-primary {
@@ -54,13 +54,16 @@ button.accept-policy {
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
+    background-color: lightgoldenrodyellow;
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+    background-color: lightgoldenrodyellow;
+    color: white;
 }
 .footer {
   position: absolute;
@@ -68,4 +71,9 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+  color: white;
+  background-color: goldenrod
 }
+
+
+
